# ray_tracer

./: CMakeLists.txt  Untitled-1  example_img  example_img.cpp  example_img2  example_img2.cpp  img10  img10.cpp  img10_1.ppm  img10_2.ppm  img3  img3.cpp  img4  img4.cpp  img5  img5.cpp  img6  img6.cpp  img7  img7.cpp  img8  img8.cpp  img8.ppm  img9  img9.cpp
libs/: Camera.h  Hitable.h  Hitablelist.h  Material.h  Ray.h  Sphere.h  Vec3.h
